# sage-euler-product

./: .buildinfo  .codespellrc  .gitignore  .gitlab-ci.yml  .pylintrc  README.md  environment.yml  genindex.html  gitlab-ci.yml  index.html  makefile  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/reference/: api.doctree
.doctrees/tutorial/: LoeschianConstant-NS-04-MCOMP.doctree  index.doctree  install_dev.doctree
.github/workflows/: lint.yml  manual.yml  pylint-auto.yml  pylint.yml  tests.yml
_modules/: index.html
_modules/euler_product/: lattice_invariant_euler_products.html  utils_euler_product.html
_sources/: index.rst.txt
_sources/tutorial/: LoeschianConstant-NS-04-MCOMP.rst.txt  index.rst.txt  install_dev.rst.txt
devcontainer/: dockernonvalable  non-valable  numpy.js
doc/: conf.py  environment.yml  index.rst
doc/reference/: api.rst
doc/tutorial/: LoeschianConstant-NS-04-MCOMP.rst  index.rst  install_dev.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/reference/: api.html
docs/tutorial/: LoeschianConstant-NS-04-MCOMP.html  (+2 more)
euler_product/: __init__.py  lattice_invariant_euler_products.py  utils_euler_product.py
euler_product.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
reference/: api.html
tutorial/: LoeschianConstant-NS-04-MCOMP.html  index.html  install_dev.html
(+9 files in other folders)
