[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = euler_product
addopts = --verbose
          --cov-report=term-missing
          --cov-report=html
          --cov=euler_product
          --doctest-modules

[coverage:run]
branch = True
source = euler_product
include = */euler_product/*
omit = */tests/*

[coverage:report]
exclude_lines = pragma: no cover
